# QwenBotQ

./: .env.example  .env.prod.example  .gitignore  .python-version  CHATBOT_NICKNAME.txt  COPYING  README.md  SYSTEM_PROMPT.txt  bot.py  example.env.prod  fun.py  init.py  pyproject.toml  run.sh  setupDev.sh
FurBot/: README.md  pyproject.toml
QwenBotQ/plugins/body/: __init__.py  bot.py  bot_utils.py  config.py  database.py  init.py
aioBot/plugins/aio/: __init__.py  autoReply.py  bot.py  botUtils.py  bot_utils.py  config.py  database.py  features.py  init.py  utils.py
core/: __init__.py  avatar.py  bot.py  bot_utils.py  config.py  database.py  init.py  models.py  utils.py
docs/: CNAME  README.md  index.html  reference.md  setup.md
docs/help/: README.md  bind.md  charge.md  fork.md  grant.md  info.md
docs/help/ai/: llm.md  model_change.md  set_prompt.md
docs/help/binding/: bind.md  fork.md  refresh.md  renew.md  wife.md
docs/help/group/: essences.md  group_members.md  random_essence.md
docs/help/usersystem/: charge.md  get_information.md  grant_permission.md  rank.md  sign.md  transfer.md
furBot/plugins/autoreply/: __init__.py  autoReply.py  coins.py  config.py
furBot/plugins/wifetoday/: __init__.py  wifeToday.py
qwenBot/plugins/autoreply/: __init__.py  autoReply.py  coins.py  config.py
qwenbotq/: __init__.py  ai.py  bilinotice.py  binding.py  bot.py  bot_utils.py  config.py  configModel.py  config_model.py  database.py  group.py  init.py  models.py  usersystem.py  utils.py
