[tool.poetry]
name = "qwenbotq"
version = "0.1.0"
description = "A smart QQ bot based on Nonebot2 and Onebot v11."
authors = ["originalFactor"]
license = "GPL-v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
nonebot2 = "^2.3.3"
openai = "^1.47.0"
motor = "^3.6.0"
nonebot-plugin-status = "^0.9.0"
nonebot-adapter-satori = "^0.12.6"
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.4.2"
pylint = "^3.3.1"
autopep8 = "^2.3.1"
pylance = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
