[tool.poetry]
name = "qwenbotq"
version = "0.1.0"
description = "A smart QQ bot based on Nonebot2 and Onebot v11."
authors = ["originalFactor"]
license = "GPL-v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
nonebot2 = "^2.3.3"
nonebot-adapter-onebot = "^2.4.5"
motor = "^3.6.0"
beanie = "^1.27.0"
aiohttp = "^3.10.10"
nonebot-plugin-apscheduler = "^0.5.0"
aiodns = "^3.2.0"
openai = "^1.58.1"
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
